@@ -1,33 +1,0 @@
-# Copyright (C) 2008 LibreSoft
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Library General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
-#
-# Authors :
-#       Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
-
-class Cache:
-
-    __shared_state = { 'cache' : {} }
-
-    def __init__ (self):
-        self.__dict__ = self.__shared_state
-        
-    def insert (self, key, value):
-        self.__dict__['cache'][key] = value
-
-    def lookup (self, key):
-        return self.__dict__['cache'].get (key, None)
-
-    
